Fix misalignment of branches and leaves

--- a/webroot/css/pages.less
+++ b/webroot/css/pages.less
@@ -265,6 +265,11 @@ div#custom_event_type_options {
         margin-left: -15px;
         margin-right: 5px;
     }
+
+    img.leaf {
+        padding-left: 3px;
+        padding-right: 8px;
+    }
 }
 #available_tags_container {
     border: 1px solid rgba(0,0,0,.15);
